WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156453
DOMTokenList.contains() should not throw
https://bugs.webkit.org/show_bug.cgi?id=156453
Summary
DOMTokenList.contains() should not throw
Chris Dumez
Reported
2016-04-10 13:44:00 PDT
DOMTokenList.contains() should not throw if the input token is invalid:
https://github.com/whatwg/dom/commit/6d3076e3cbcba662489b272a718bc6b8c0082a74
Attachments
Patch
(24.51 KB, patch)
2016-04-10 14:12 PDT
,
Chris Dumez
rniwa
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-04-10 14:07:12 PDT
First updating web-platform-tests via:
https://github.com/w3c/web-platform-tests/pull/2809
Chris Dumez
Comment 2
2016-04-10 14:12:50 PDT
Created
attachment 276107
[details]
Patch
Ryosuke Niwa
Comment 3
2016-04-11 09:46:52 PDT
Comment on
attachment 276107
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=276107&action=review
> LayoutTests/imported/w3c/ChangeLog:8 > + Re-sync dom/nodes/Element-classlist.html with upstream.
Could you add the git hash to which you're synced?
Chris Dumez
Comment 4
2016-04-11 09:50:39 PDT
Committed
r199296
: <
http://trac.webkit.org/changeset/199296
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug